--- a/app/src/js/app/components/projects/views/projectFormView.html
+++ b/app/src/js/app/components/projects/views/projectFormView.html
@@ -116,6 +116,7 @@
                         <th class="imm-cstm__grid-5"></th>
                         <th></th>
                         <th></th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -124,7 +125,10 @@
                         <td title="{{task.description}}">{{task.description | truncateTail:true:50:'...'}}</td>
                         <td>{{task.duration}}</td>
                         <td>
-                            <a href="" ng-click="editTask(index,task)">
+                             <a href="" ng-click="editTask(index,task)" ><img class="img_stop" src="/assets/images/icons/details-ico-blue.svg"></a>
+                        </td>
+                        <td>
+                            <a ui-sref="app.taskForm({id: task.id})">
                                 <img src="assets/images/icons/pencil-ico.svg">
                             </a>
                         </td>
