--- a/app/src/js/app/components/tasks/tasks/views/tasksView.html
+++ b/app/src/js/app/components/tasks/tasks/views/tasksView.html
@@ -20,6 +20,7 @@
 
                 <th class="imm-cstm__grid-5"></th>
                 <th class="imm-cstm__grid-5"></th>
+                <th class="imm-cstm__grid-5"></th>
             </tr>
         </thead>
         <tbody>
@@ -29,7 +30,7 @@
                 <td><input class="field-filter" ng-model="filter.description"></td>
                 <td><input class="field-filter" ng-model="filter.duration"></td>
                 <td><input class="field-filter" ng-model="filter.status"></td>
-
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
