--- a/app/src/js/app/components/users/views/userFormView.html
+++ b/app/src/js/app/components/users/views/userFormView.html
@@ -91,21 +91,21 @@
     <div class="imm-frm__fldgrp">
       <div class="imm-frm__fld" ng-if="user.id">
         <label class="imm-frm__lbl">
-          <img src="/assets/images/icons/trello-icon.png" style="width: 100px; height: 100px;"></img>
+          <img src="/assets/images/icons/trello-icon.png" style="width: 100px; height: 100px;cursor: not-allowed"></img>
           <b class="imm-frm__lbl-name">{{ 'Trello' }}</b>
         </label>
       </div>
 
       <div class="imm-frm__fld">
         <label class="imm-frm__lbl">
-          <img src="/assets/images/icons/teamwork-icon.png" style="width: 100px; height: 100px;"></img>
+          <img src="/assets/images/icons/teamwork-icon.png" style="width: 100px; height: 100px;cursor: not-allowed"></img>
           <b class="imm-frm__lbl-name">{{ 'Teamwork' }}</b>
         </label>
       </div>
 
       <div class="imm-frm__fld">
         <label class="imm-frm__lbl">
-          <img src="/assets/images/icons/jira-icon.jpg" style="width: 100px; height: 100px;"></img>
+          <img src="/assets/images/Jira-PBXDom.png" style="width: 135px; height: 100px;cursor: not-allowed"></img>
           <b class="imm-frm__lbl-name">{{ 'Jira' }}</b>
         </label>
       </div>
