NIS31(fix)/NIS35/NIS36

--- a/app/src/js/app/components/CRM/views/dashboardView.html
+++ b/app/src/js/app/components/CRM/views/dashboardView.html
@@ -79,4 +79,12 @@
                 <b class="imm-wa__lbl">{{ 'Reportes' }}</b>
             </a>
         </div>
+        <div class="imm-cstm__grid imm-cstm__cntr">
+            <a ui-sref="app.evaluate">
+                <div class="imm-cstm__grid-25-two">
+                    <img src="/assets/catalogos/evolucion.svg">
+                </div>
+                <b class="imm-wa__lbl">{{ 'Evaluaciones' }}</b>
+            </a>
+        </div>
 </div>
