--- a/app/src/js/app/components/users/views/userFormView.html
+++ b/app/src/js/app/components/users/views/userFormView.html
@@ -88,10 +88,10 @@
   </form>
 
   <div class="imm-frm__fld">
-    <ul class="imm-tabs" ng-init="tabUser = 1">
-        <li class="imm-tabs__item" ng-click="tabUser = 1" ng-class="{'imm-tabs__item--selected' : tabUser == 1}">Mi rendimiento</li>
+    <ul class="imm-tabs">
+        <li class="imm-tabs__item" ng-click="tabUser = 1; tab1()" ng-class="{'imm-tabs__item--selected' : tabUser == 1}">Mi rendimiento</li>
         <li class="imm-tabs__item" ng-click="tabUser = 2" ng-class="{'imm-tabs__item--selected' : tabUser == 2}">Integraciones</li>
-        <li class="imm-tabs__item" ng-click="tabUser = 3" ng-class="{'imm-tabs__item--selected' : tabUser == 3}">Evaluaciones</li>
+        <li class="imm-tabs__item" ng-click="tabUser = 3; tab3()" ng-class="{'imm-tabs__item--selected' : tabUser == 3}">Evaluaciones</li>
     </ul>
 </div>
 
@@ -99,20 +99,16 @@
     <table>
         <thead>
             <tr>
-                <th>{{ 'users.month' | translate }}</th>
-                <th>{{ 'users.salary' | translate }}</th>
+              <th>{{ 'users.month' | translate }}</th>
+              <th>{{ 'users.salary' | translate }}</th>
+              <th>Costo hora</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><input class="field-filter" ng-model="filter.month"></td>
-                <td><input class="field-filter" ng-model="filter.salary"></td>
-            </tr>
-            <tr>
-                <td>Enero</td>
-            </tr>
-            <tr>
-                <td>Febrero</td>
+            <tr ng-repeat="month in performance.months">
+                <td>{{month.Month}}</td>
+                <td>{{month.Sueldo}}</td>
+                <td>{{month.HourCost}}</td>
             </tr>
         </tbody>
     </table>
