--- a/app/src/js/app/components/users/views/userFormView.html
+++ b/app/src/js/app/components/users/views/userFormView.html
@@ -89,26 +89,52 @@
 
   <div class="imm-frm__fld">
     <ul class="imm-tabs">
-        <li class="imm-tabs__item" ng-click="tabUser = 1; tab1()" ng-class="{'imm-tabs__item--selected' : tabUser == 1}">Mi rendimiento</li>
+        <li class="imm-tabs__item" ng-init="tabUser = 1; tab1()" ng-click="tabUser = 1; tab1()" ng-class="{'imm-tabs__item--selected' : tabUser == 1}">Mi rendimiento</li>
         <li class="imm-tabs__item" ng-click="tabUser = 2" ng-class="{'imm-tabs__item--selected' : tabUser == 2}">Integraciones</li>
         <li class="imm-tabs__item" ng-click="tabUser = 3; tab3()" ng-class="{'imm-tabs__item--selected' : tabUser == 3}">Evaluaciones</li>
     </ul>
 </div>
 
 <div class="imm-wa__cnt" ng-if="tabUser == 1">
+  <label class="imm-frm__lbl">
+    <div moment-picker="performance.month.year" start-view="decade" min-date="date.minDate" max-date="date.maxDate" max-view="decade" start-date="date.startDate">
+      <input ng-model="performance.month.year">
+    </div>
+    <b class="imm-frm__lbl-name">{{'Año'}}</b>
+  </label>
     <table>
         <thead>
             <tr>
               <th>{{ 'users.month' | translate }}</th>
+              <th>{{ 'users.year' | translate }}</th>
               <th>{{ 'users.salary' | translate }}</th>
-              <th>Costo hora</th>
+              <th>{{ 'users.costhour' | translate }}</th>
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="month in performance.months">
-                <td>{{month.Month}}</td>
-                <td>{{month.Sueldo}}</td>
-                <td>{{month.HourCost}}</td>
+            <tr ng-repeat="month in performance.actual" style="background-color: lightgreen;">
+                <td>{{month.month}}</td>
+                <td>{{month.year}}</td>
+                <td>{{month.salary}}</td>
+                <td>{{month.costHour}}</td>
+            </tr>
+            <tr ng-repeat="month in performance.past" style="background-color: lightblue;">
+                <td>{{month.month}}</td>
+                <td>{{month.year}}</td>
+                <td>{{month.salary}}</td>
+                <td>{{month.costHour}}</td>
+            </tr>
+            <tr ng-click="moreMonths(); show='false'" ng-init="show='true'">
+              <th style="cursor: pointer;" ng-if="show=='true'">Mostrar meses anteriores <i style="margin-left: 10px;">▼</i></th>
+              <th ng-if="show=='true'"></th>
+              <th ng-if="show=='true'"></th>
+              <th ng-if="show=='true'"></th>
+            </tr>
+            <tr ng-repeat="month in performance.allMonths" ng-if="show=='false'">
+                <td>{{month.month}}</td>
+                <td>{{month.year}}</td>
+                <td>{{month.salary}}</td>
+                <td>{{month.costHour}}</td>             
             </tr>
         </tbody>
     </table>
@@ -159,8 +185,8 @@
                         <div class="flex-item">{{eval.evaluacion}}</div>
                         <div class="flex-item">{{eval.puntaje | truncateTail:true:20:'...'}}</div>
                         <div class="flex-item">{{eval.admin}}</div>
-                        <div style="flex: 5%;width: 5%;">
-                            <a href="" ng-click="editTrack(track)">
+                        <div style="flex: 5%;width: 5%;" ng-click="showEval(eval.evaluacion)">
+                            <a>
                                 <img src="assets/images/icons/pencil-ico.svg">
                             </a>
                         </div>
