--- a/app/src/js/app/components/projects/views/projectFormView.html
+++ b/app/src/js/app/components/projects/views/projectFormView.html
@@ -95,11 +95,16 @@
                 </label>
             </div>
 
-            <div class="imm-frm__fld">
+            <div class="imm-frm__fld" ng-if="project.id">
                 <label class="imm-frm__lbl">
                     <button class="imm-btn" ui-sref="app.taskForm({id: project.id})">{{ 'projects.add_task' | translate }}</button>
                 </label>
             </div>
+        </div>
+        <div ng-if="!project.id" class="imm-frm__fld">
+            <label class="imm-frm__lbl">
+                <p style="color: red; font-weight: bold; font-size: 12px">*Debe crear un proyecto para luego agregar tareas.</p>
+            </label>
         </div>
 
         <div class="imm-frm__fldgrp" ng-if="tasks.length">
